@@ -338,16 +338,24 @@ namespace tgui
 
         /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
         /// @brief Focuses the next widget in this container
+        ///
+        /// @param recursive  If the focused widget is a container, should the next widget inside it be focused instead of
+        ///                   focusing the sibling of the container?
+        ///
         /// @return Whether a new widget was focused
         /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
-        bool focusNextWidget();
+        bool focusNextWidget(bool recursive = true);
 
 
         /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
         /// @brief Focuses the previous widget in this container
+        ///
+        /// @param recursive  If the focused widget is a container, should the previous widget inside it be focused instead of
+        ///                   focusing the sibling of the container?
+        ///
         /// @return Whether a new widget was focused
         /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
-        bool focusPreviousWidget();
+        bool focusPreviousWidget(bool recursive = true);
 
 
         /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
@@ -494,7 +502,7 @@ namespace tgui
         /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
         // Try to focus the given child widget
         /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
-        bool tryFocusWidget(const tgui::Widget::Ptr &widget, bool reverseWidgetOrder);
+        bool tryFocusWidget(const tgui::Widget::Ptr &widget, bool reverseWidgetOrder, bool recursive);
 
 
         /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
