@@ -340,16 +340,24 @@ namespace tgui
 
         /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
         /// @brief Focuses the next widget in the gui
+        ///
+        /// @param recursive  If the focused widget is a container, should the next widget inside it be focused instead of
+        ///                   focusing the sibling of the container?
+        ///
         /// @return Whether a new widget was focused
         /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
-        bool focusNextWidget();
+        bool focusNextWidget(bool recursive = true);
 
 
         /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
         /// @brief Focuses the previous widget in the gui
+        ///
+        /// @param recursive  If the focused widget is a container, should the next widget inside it be focused instead of
+        ///                   focusing the sibling of the container?
+        ///
         /// @return Whether a new widget was focused
         /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
-        bool focusPreviousWidget();
+        bool focusPreviousWidget(bool recursive = true);
 
 
         /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
